--- a/roles/commcare_sync/defaults/main.yml
+++ b/roles/commcare_sync/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 
-base_python_package: "{{ ansible_python_interpreter | default('/usr/bin/python') | basename }}"
+ansible_python_interpreter: /usr/bin/python3
+base_python_package: "python3"
 
 apt_update_cache: yes
 
