--- a/inventories/dev/group_vars/commcare_sync/vars.yml
+++ b/inventories/dev/group_vars/commcare_sync/vars.yml
@@ -1,10 +1,8 @@
 ---
 
-apt_update_cache: yes
+public_host: 192.168.11.10
 
 app_user: "{{ ansible_user }}"
-app_name: commcare_sync
-project_name: commcare_sync
 django_settings_module: "{{ app_name }}.local"
 google_analytics_id: ""
 
