add certbot install

--- a/roles/commcare_sync/tasks/main.yml
+++ b/roles/commcare_sync/tasks/main.yml
@@ -114,4 +114,9 @@
 - include_tasks: nginx.yml
   tags: nginx
 
+
+- include_tasks: letsencrypt_cert.yml
+  tags: letsencrypt
+  when: env != 'dev'
+
 ...
