--- a/roles/commcare_sync/tasks/main.yml
+++ b/roles/commcare_sync/tasks/main.yml
@@ -116,6 +116,12 @@
     - supervisor
 
 
+# Superset
+
+- include_tasks: superset.yml
+  tags:
+    - superset
+
 # NGINX
 
 - include_tasks: nginx.yml
