--- a/roles/commcare_sync/defaults/main.yml
+++ b/roles/commcare_sync/defaults/main.yml
@@ -26,6 +26,7 @@ static_dir: "{{ src_dir }}/static_root"
 media_dir: "{{ src_dir }}/media"
 
 # superset defaults
+superset_enabled: yes
 superset_db_name: "superset_tmp"
 superset_project_dir: "{{ base_dir }}/superset"
 superset_virtualenv_dir: "{{ base_dir }}/.virtualenvs/superset"
