--- a/inventories/dev/group_vars/commcare_sync/vars.yml
+++ b/inventories/dev/group_vars/commcare_sync/vars.yml
@@ -2,7 +2,7 @@
 
 public_host: 192.168.11.10
 superset_public_host: superset.vagrant.local  # this needs to be manually mapped to 192.168.11.10 in /etc/hosts
-
+superset_enabled: yes
 
 app_user: "{{ ansible_user }}"
 django_settings_module: "{{ app_name }}.local"
