--- a/inventories/dev/group_vars/commcare_sync/vars.yml
+++ b/inventories/dev/group_vars/commcare_sync/vars.yml
@@ -9,5 +9,6 @@ django_settings_module: "{{ app_name }}.local"
 
 # These variables are normally encrypted and stored in an ansible vault.
 vault_default_db_password: commcarehq
+vault_default_superset_password: superset
 vault_mapbox_api_key: fixme
 ...
