--- a/roles/commcare_sync/defaults/main.yml
+++ b/roles/commcare_sync/defaults/main.yml
@@ -27,9 +27,15 @@ media_dir: "{{ src_dir }}/media"
 
 # superset defaults
 superset_enabled: yes
+superset_ssl_enabled: no
 superset_db_name: "superset"
 superset_project_dir: "{{ base_dir }}/superset"
 superset_virtualenv_dir: "{{ base_dir }}/.virtualenvs/superset"
+superset_username: admin
+superset_firstname: Admin
+superset_lastname: User
+superset_email: superset-admin@example.com
+superset_password: "{{ vault_default_superset_password }}"
 
 postgresql_version: 10
 postgresql_user: postgres
@@ -52,6 +58,7 @@ app_environment:
 
 superset_environment:
   SQLALCHEMY_DATABASE_URI: 'postgresql://{{ default_db_user }}:{{ default_db_password }}@{{ default_db_host }}:{{ default_db_port }}/{{ superset_db_name }}'
+  FLASK_APP: superset
 
 gunicorn_num_workers: 3
 gunicorn_max_requests: 0
