add ssl_enabled workflow

--- a/inventories/togo-bi/group_vars/commcare_sync/vars.yml
+++ b/inventories/togo-bi/group_vars/commcare_sync/vars.yml
@@ -2,8 +2,10 @@
 
 public_host: commcare-sync-togo.dimagi.com
 superset_public_host: superset-togo.dimagi.com
+ssl_enabled: yes
 superset_enabled: yes
 superset_ssl_enabled: yes
+
 
 app_user: "{{ ansible_user }}"
 django_settings_module: "{{ app_name }}.local"
