add periodicity and timezone support

--- a/inventories/togo-bi/group_vars/commcare_sync/vars.yml
+++ b/inventories/togo-bi/group_vars/commcare_sync/vars.yml
@@ -10,4 +10,7 @@ superset_ssl_enabled: yes
 app_user: "{{ ansible_user }}"
 django_settings_module: "{{ app_name }}.local"
 
+project_timezone: "Etc/GMT"
+commcare_sync_export_periodicity: 7200  # 60 * 60 * 2 = every 2 hours
+
 ...
