--- a/inventories/onse/group_vars/commcare_sync/vars.yml
+++ b/inventories/onse/group_vars/commcare_sync/vars.yml
@@ -6,8 +6,10 @@ ssl_enabled: yes
 superset_enabled: yes
 superset_ssl_enabled: yes
 
-
 app_user: "{{ ansible_user }}"
 django_settings_module: "{{ app_name }}.local"
+
+project_timezone: "Africa/Johannesburg"
+commcare_sync_export_periodicity: 28800  # 60 * 60 * 8 = every 8 hours
 
 ...
