--- a/inventories/access/hosts.yml
+++ b/inventories/access/hosts.yml
@@ -6,8 +6,10 @@ all:
   hosts:
     access-bi:
       ansible_user: dimagi
-      ansible_host: 0.tcp.ngrok.io  # 102.16.2.238  not working
-      ansible_port: 19464  # 2223 not working
+      ansible_host: 102.16.2.238
+      ansible_port: 2223
+      # ansible_host: 0.tcp.ngrok.io
+      # ansible_port: 19464
   children:
     commcare_sync:
       hosts:
