--- a/inventories/aurum/hosts.yml
+++ b/inventories/aurum/hosts.yml
@@ -1,15 +1,16 @@
 ---
-#To run playbook using username,password credentials, set ANSIBLE_HOST_KEY_CHECKING=False
+# if you run playbook using username,password as credentials, set ANSIBLE_HOST_KEY_CHECKING=False
 # cmd: export ANSIBLE_HOST_KEY_CHECKING=False
-#
+
 all:
   vars:
     env: aurum
   hosts:
     aurum:
-      ansible_user: "<AURUM_USERNAME>"
-      ansible_host: "<AURUM_HOST>"
-      ansible_ssh_pass: "<AURUM_USER_PASSWORD>"
+      ansible_user: superadmin
+      ansible_host: 10.0.1.15
+      ansible_ssh_private_key_file: ~/.ssh/aurum-sync-rsa
+
   children:
     commcare_sync:
       hosts:
