--- a/roles/commcare_sync/tasks/nginx.yml
+++ b/roles/commcare_sync/tasks/nginx.yml
@@ -29,7 +29,7 @@
     src: nginx/gunicorn_nginx_without_ssl_config.j2
     dest: /etc/nginx/sites-available/{{ project_name }}.conf
     backup: yes
-  when: "{{ not ssl_enabled }}"
+  when: "not ssl_enabled"
   tags: nginx
 
 - name: Enable {{ app_name }} nginx config.
@@ -37,7 +37,7 @@
     src: /etc/nginx/sites-available/{{ project_name }}.conf
     dest: /etc/nginx/sites-enabled/{{ project_name }}.conf
     state: link
-  when: "{{ not ssl_enabled }}"
+  when: "not ssl_enabled"
   tags: nginx
 
 - name: Disable default nginx config.
