fix dev install

--- a/inventories/dev/group_vars/commcare_sync/vars.yml
+++ b/inventories/dev/group_vars/commcare_sync/vars.yml
@@ -11,4 +11,5 @@ django_settings_module: "{{ app_name }}.local"
 vault_default_db_password: commcarehq
 vault_default_superset_password: superset
 vault_mapbox_api_key: fixme
+vault_django_secret_key: hunter2
 ...
