--- a/roles/commcare_sync/defaults/main.yml
+++ b/roles/commcare_sync/defaults/main.yml
@@ -53,6 +53,7 @@ default_db_port: 5432
 
 django_settings_module: "{{ app_name }}.settings"
 django_secret_key: "{{ vault_django_secret_key }}"
+django_allow_public_signups: no
 django_migrate: true
 django_collectstatic: true
 
