--- a/roles/commcare_sync/tasks/django.yml
+++ b/roles/commcare_sync/tasks/django.yml
@@ -64,6 +64,10 @@
     - "{{ static_dir }}"
     - "{{ media_dir }}"
 
+- name: set acl on app log directory.
+  shell: setfacl -d -m u::rwx,g::rw,o::rw {{ item }}
+  with_items:
+    - "{{ log_dir }}"
 
 # Django
 
