--- a/inventories/dev/group_vars/commcare_sync/vars.yml
+++ b/inventories/dev/group_vars/commcare_sync/vars.yml
@@ -3,6 +3,7 @@
 public_host: 192.168.11.10
 superset_public_host: superset.vagrant.local  # this needs to be manually mapped to 192.168.11.10 in /etc/hosts
 superset_enabled: yes
+superset_feature_flags: []
 
 app_user: "{{ ansible_user }}"
 django_settings_module: "{{ app_name }}.local"
