add new setting to example vars.yml

--- a/inventories/example/group_vars/commcare_sync/vars.yml
+++ b/inventories/example/group_vars/commcare_sync/vars.yml
@@ -11,6 +11,7 @@ django_settings_module: "{{ app_name }}.local"
 postgresql_backup_enabled: false
 # Add any other DBs separated with spaces
 postgresql_backup_db_list: "superset"
+postgresql_backups_to_keep: 5  # 0 will ignore this setting
 
 # vault_ variables are stored in vault.yml file (pw: "secret")
 ...
