--- a/inventories/dev/group_vars/commcare_sync/vars.yml
+++ b/inventories/dev/group_vars/commcare_sync/vars.yml
@@ -15,5 +15,7 @@ vault_default_db_password: commcarehq
 vault_default_superset_password: superset
 vault_mapbox_api_key: fixme
 vault_django_secret_key: hunter2
+vault_django_fernet_keys:
+  - WdhSSofL358scO4ADkQtxzOHghk-qwo5u2GCsAU2tw0=
 vault_superset_secret_key: secret_key
 ...
