Don't update uv.lock on deploy

--- a/roles/commcare_sync/tasks/django.yml
+++ b/roles/commcare_sync/tasks/django.yml
@@ -6,7 +6,7 @@
   become: yes
   become_user: "{{ app_user }}"
   shell:
-    cmd: "{{ ansible_env.HOME }}/.local/bin/uv sync --extra prod"
+    cmd: "{{ ansible_env.HOME }}/.local/bin/uv sync --frozen --extra prod"
     chdir: "{{ src_dir }}"
   tags: deploy
 
