Store Fernet keys in a string
Store Fernet keys in a string of a JSON list, instead of as a list, to
avoid YAML parsing problems.

--- a/inventories/dev/group_vars/commcare_sync/vars.yml
+++ b/inventories/dev/group_vars/commcare_sync/vars.yml
@@ -15,8 +15,6 @@ vault_default_db_password: <secret1>
 vault_default_superset_password: <secret2>
 vault_mapbox_api_key: <secret3>
 vault_django_secret_key: <secret4>
-vault_django_fernet_keys:
-  # Generate with `from cryptography.fernet import Fernet; Fernet.generate_key()`
-  - <secret5>
+vault_django_fernet_keys: '["<secret5>"]'  # JSON-formatted list
 vault_superset_secret_key: <secret6>
 ...
