Rename CommCare Sync to CommCare Data Pipeline
Excludes renaming directories, repositories and variables

--- a/commcare_sync.yml
+++ b/commcare_sync.yml
@@ -2,7 +2,7 @@
 # Issue: https://github.com/ansible/ansible/issues/57529#issuecomment-513143430
 - hosts: all
 
-- name: Create CommCare Sync Server.
+- name: Create CommCare Data Pipeline server.
   hosts: all
   become: yes
   become_user: root
